# GameDB

./: .gitignore  CMakeLists.txt  README.md  index.c  info.json
data/: logindata.json
